--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,8 @@
         <title>Godo Designs</title>
         <link rel="icon" href="Images\ad.png"type="Image.png"sizes="16x16">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    </head>
+        <link rel="stylesheet" href="index.css">
+      </head>
 <body>
     <!--Nav Bar-->
 <header>
@@ -91,6 +92,9 @@
                     <a href="https://www.facebook.com/gododesigns/">
                 <i class="fa-brands fa-square-facebook text-white fa-2x m-2"></i>
                     </a>
+                    <a href="https://github.com/gododesigns">
+                      <i class="fa-brands fa-github text-white fa-2x m-2"></i>
+                          </a>
                 <div class="row">
                     <div class="col-md-6 pr-5" style="text-align:end;">
                         <p class="font-weight-bold">Copyrights © Godo Designs</p>
