Gallery added contact form link to google sheet, content added in landing page

--- a/Gallery.html
+++ b/Gallery.html
@@ -9,8 +9,9 @@
   <link rel="icon" href="Images\ad.png" type="Image.png" sizes="16x16">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="Gallery.css">
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+</head>
 
 <body>
   <!--Nav Bar-->
@@ -54,77 +55,74 @@
       </div>
     </div>
     </head>
-    <!--Services-->
-    <section class="bg-light pb-5">
-      <div class="container pt-5">
-        <h1 class="text-center font-weight-bold" style="font-family: 'Merriweather', serif;">SERVICES</h1>
-        <div class="row">
-          <div class="col-md-4 pt-3">
-            <div class="card text-center p-3" style="height: 18rem;">
-              <i class="fa-solid fa-video display-1 text-warning"></i>
-              <div class="card-body">
-                <h5 class="card-title font-weight-bold" style="font-family: 'Merriweather', serif;">VIDEO EDITING</h5>
-                <p class="card-text" style="font-family: 'Merriweather', serif;">Youtube Videos<br>Invitation, Status,
-                  Reals</p>
-              </div>
+    <div class="row bg-light p-3" style="font-family: 'Merriweather', serif; text-align: center;">
+      <h3>Our Works</h3>
+    </div>
+    <section class="gallery bg-light">
+      <div class="container-lg">
+        <div class="row gy-4 row-cols-1 row-cols-sm-2 row-cols-md-5">
+          <div class="col">
+            <img src="Images/1.png" class="gallery-item" alt="gallery" oncontextmenu="return false">
+            <div class="pt-4">
+              <img src="Images/2.png" class="gallery-item" alt="gallery" oncontextmenu="return false">
             </div>
           </div>
-          <div class="col-md-4 pt-3">
-            <div class="card text-center p-3" style="height: 18rem;">
-              <i class="fa-solid fa-book display-1 text-warning"></i>
-              <div class="card-body">
-                <h5 class="card-title font-weight-bold" style="font-family: 'Merriweather', serif;">BOOK DESIGNS</h5>
-                <p class="card-text" style="font-family: 'Merriweather', serif;">Booklets, Newsletter<br>Brochure</p>
-              </div>
+          <div class="col">
+            <img src="Images/3.png" class="gallery-item" alt="gallery" oncontextmenu="return false">
+            <div class="pt-4">
+              <img src="Images/4.png" class="gallery-item" alt="gallery" oncontextmenu="return false">
             </div>
           </div>
-          <div class="col-md-4 pt-3">
-            <div class="card text-center p-3" style="height: 18rem;">
-              <i class="fa-solid fa-address-card display-1 text-warning"></i>
-              <div class="card-body">
-                <h5 class="card-title font-weight-bold" style="font-family: 'Merriweather', serif;">CARD DESIGNS</h5>
-                <p class="card-text" style="font-family: 'Merriweather', serif;">Business Card, ID Card<br>Invitation
-                  Card</p>
-              </div>
+          <div class="col">
+            <img src="Images/5.png" class="gallery-item" alt="gallery" oncontextmenu="return false">
+            <div class="pt-4">
+              <img src="Images/6.png" class="gallery-item" alt="gallery" oncontextmenu="return false">
             </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-md-4 pt-3">
-            <div class="card text-center p-3" style="height: 18rem;">
-              <i class="fa-solid fa-file-powerpoint display-1 text-warning"></i>
-              <div class="card-body">
-                <h5 class="card-title font-weight-bold" style="font-family: 'Merriweather', serif;">PPT SLIDE</h5>
-                <p class="card-text" style="font-family: 'Merriweather', serif;">1:1 Slides, 2:3 Sildes<br>4:3 Silde,
-                  16:9 Slides</p>
-              </div>
+          <div class="col">
+            <img src="Images/7.png" class="gallery-item" alt="gallery" oncontextmenu="return false">
+            <div class="pt-4">
+              <img src="Images/8.png" class="gallery-item" alt="gallery" oncontextmenu="return false">
             </div>
           </div>
-          <div class="col-md-4 pt-3">
-            <div class="card text-center p-3" style="height: 18rem;">
-              <i class="fa-solid fa-rectangle-ad display-1 text-warning"></i>
-              <div class="card-body">
-                <h5 class="card-title font-weight-bold" style="font-family: 'Merriweather', serif;">Ad DESIGNS</h5>
-                <p class="card-text" style="font-family: 'Merriweather', serif;">Sticker, Notice<br>Poster, Flux,</p>
-              </div>
-            </div>
+          <div class="col">
+            <img src="Images/9.png" class="gallery-item" alt="gallery" oncontextmenu="return false">
+            <div class="pt-4"></div>
+            <img src="Images/14.png" class="gallery-item" alt="gallery" oncontextmenu="return false">
           </div>
-          <div class="col-md-4 pt-3">
-            <div class="card text-center p-3" style="height: 18rem;">
-              <i class="fa-solid fa-sign-hanging display-1 text-warning"></i>
-              <div class="card-body">
-                <h5 class="card-title font-weight-bold" style="font-family: 'Merriweather', serif;">SIGN BOARD</h5>
-                <p class="card-text" style="font-family: 'Merriweather', serif;">Hospital, Hotel<br>School, Office</p>
-              </div>
-            </div>
+          <div class="col">
+            <img src="Images/10.png" class="gallery-item" alt="gallery" oncontextmenu="return false">
+          </div>
+          <div class="col">
+            <img src="Images/11.png" class="gallery-item" alt="gallery" oncontextmenu="return false">
+          </div>
+          <div class="col">
+            <img src="Images/12.png" class="gallery-item" alt="gallery" oncontextmenu="return false">
+          </div>
+          <div class="col">
+            <img src="Images/13.png" class="gallery-item" alt="gallery" oncontextmenu="return false">
           </div>
         </div>
-      </div>
       </div>
     </section>
+    <!-- Modal -->
+    <div class="modal fade" id="gallery-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog modal-sm-down">
+        <div class="modal-content">
+          <div class="modal-header" style="font-family: 'Merriweather', serif;">
+            <img src="Images\logo.png" class="rounded mx-auto d-block img-fluid" width="6%">
+            <h5 class="modal-title col-md-10" id="exampleModalLabel">Godo Designs</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <img src="img/1.jpg" class="modal-img" alt="modal img" oncontextmenu="return false">
+          </div>
+        </div>
+      </div>
+    </div>
     <!--footer-->
     <footer class="bg-warning">
-      <div class="container">
+      <div class="container" style="text-decoration: none;">
         <div class="row">
           <div class="col-md-12 text-center text-dark">
             <a href="https://www.youtube.com/channel/UCA1MOnKGAXEDOKZU98v1FSQ">
@@ -165,7 +163,8 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/f02b892144.js" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/f02b892144.js" crossorigin="anonymous"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
