--- a/index.html
+++ b/index.html
@@ -1,84 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Godo Designs</title>
-    <link rel="icon" href="Images\ad.png"type="Image.png"sizes="16x16">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="icon" href="Images\ad.png" type="Image.png" sizes="16x16">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Paytone+One&display=swap" rel="stylesheet">
 </head>
+
 <body>
-<!--Header-->
-<header class="bg-warning">
-    <div class="row">
-        <div class="col-md-6 p-5 pl-5">
-            <img src="Images\ab.png"class="rounded mx-auto d-block img-fluid">
+    <!--Header-->
+    <header class="bg-warning">
+        <div class="row">
+            <div class="col-md-6 p-5 pl-5">
+                <img src="Images\logo.png" class="rounded mx-auto d-block img-fluid" width="50%">
+            </div>
+            <div class="col-md-6 text-center my-auto">
+                <h1 class="font-dark font-weight-bold display-3" style="font-family: 'Paytone One', sans-serif;">GODO
+                    DESIGNS</h1>
+                <h2 class="font-dark font-weight-bold" style="font-family: 'Dancing Script', cursive;">Final Touch of
+                    Your Designs</h2>
+            </div>
         </div>
-        <div class="col-md-6 text-center my-auto">
-            <h1 class="font-dark font-weight-bold display-3">GODO<br>DESIGNS</h1>
-            <h2 class="font-dark font-weight-bold">Final Touch of Your Ideas</h2>
+    </header>
+    <!--Nav Bar-->
+    <section class="sticky-top">
+        <div class="col-md-12 bg-warning ">
+            <ul class="nav justify-content-center">
+                <li class="nav-item">
+                    <a class="nav-link active text-dark font-weight-bold" href="#">
+                        <h5 style="font-family: 'Merriweather', serif;">HOME
+                    </a></h5>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-dark font-weight-bold" href="service.html">
+                        <h5 style="font-family: 'Merriweather', serif;">SERVICES
+                    </a></h5>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-dark font-weight-bold" href="Gallery.html">
+                        <h5 style="font-family: 'Merriweather', serif;">GALLERY
+                    </a></h5>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-dark font-weight-bold" href="contact.html">
+                        <h5 style="font-family: 'Merriweather', serif;">CONTACT
+                    </a></h5>
+                </li>
+            </ul>
         </div>
-    </div>
-</header>
-<!--Nav Bar-->
-<section class="sticky-top">
-    <div class="col-md-12 bg-warning ">
-        <ul class="nav justify-content-center">
-            <li class="nav-item">
-                <a class="nav-link active text-secondary font-weight-bold" href="#"><h5>HOME</a></h5>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-secondary font-weight-bold" href="service.html"><h5>SERVICES</a></h5>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-secondary font-weight-bold" href="contact.html"><h5>CONTACT US</a></h5>
-            </li>
-          </ul>
-    </div>
-</section>
-<!--Youtube Video-->
-<section class="bg-light pt-5 pb-5">
-    <div class="container">
-        <div class="embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ZRuF8rZ5hfk" allowfullscreen></iframe>
+    </section>
+    <!--Youtube Video-->
+    <section class="bg-light">
+        <div class="row">
+            <div class="col-md-6 p-5 my-auto text-justify">
+                <h3 style="font-family: 'Merriweather', serif; text-align: center;">Bring your ideas to life with GODO
+                </h3>
+                <h5 style="font-family: 'Merriweather', serif; ">Godo design is a graphic design company that provides
+                    freelance
+                    services to clients all over the world.
+                    We have a team of highly skilled and experienced designers who are experts in their field.
+                    We offer a wide range of services such as logo design, web design, print design, and much more.
+                    We pride ourselves on our high quality designs and customer service.
+                    Our mission is to provide our clients with the best possible experience by
+                    offering them high quality designs at an affordable price.</h5>
+            </div>
+            <div class="col-md-6 embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item p-5" src="https://www.youtube.com/embed/ZRuF8rZ5hfk"
+                    allowfullscreen></iframe>
+            </div>
         </div>
-    </div>
-</section>
-<!--footer-->
-<footer class="bg-warning">
-    <div class="container">
-    <div class="row">
-        <div class="col-md-12 text-center text-dark">
-           <a href="https://www.youtube.com/channel/UCA1MOnKGAXEDOKZU98v1FSQ">
-           <i class="fa-brands fa-square-youtube text-white fa-2x m-2"></i>
-             </a>
-             <a href="https://www.instagram.com/gododesigns/">
-            <i class="fa-brands fa-square-instagram text-white fa-2x m-2"></i>
-                </a>
-                <a href="https://www.facebook.com/gododesigns/">
-            <i class="fa-brands fa-square-facebook text-white fa-2x m-2"></i>
-                </a>
-                <a href="https://github.com/gododesigns">
-                    <i class="fa-brands fa-github text-white fa-2x m-2"></i>
-                        </a>
+    </section>
+    <section class="bg-light">
+        <div class="row">
+            <div class="col-lg-8 p-5 col-md-6 text-justify">
+                <h3 style="font-family: 'Merriweather', serif; text-align: center; ">Save Time & Money</h3>
+                <h5 style="font-family: 'Merriweather', serif; ">If you're looking for a reliable and budget-friendly
+                    graphic design service,
+                    then look no further than Good Designs. With our professional team of talented designers,
+                    we can create stunning visuals that are sure to grab the attention of your
+                    We understand the importance of creating a unique design that stands out from the
+                    competition and can help make your business visually stand out in the market. <br><br>
+                    Godo designs helps you save time and money by the design.
+                    With our affordable pricing plans, you can get access to all of our features without breaking the
+                    bank.</h5>
+            </div>
+            <div class="col-lg-4 p-4">
+                <img src="Images\img1.png" class="rounded mx-auto d-block img-fluid" width="70%">
+            </div>
+        </div>
+    </section>
+    <!--footer-->
+    <footer class="bg-warning">
+        <div class="container">
             <div class="row">
-                <div class="col-md-6 pr-5" style="text-align:end;">
-                    <p class="font-weight-bold">Copyrights © Godo Designs</p>
-            </div>
-            <div class="col-md-6 pl-5" style="text-align:start;">
-                <p class="font-weight-bold">Designed by Godo Designs</p>
+                <div class="col-md-12 text-center text-dark">
+                    <a href="https://www.youtube.com/channel/UCA1MOnKGAXEDOKZU98v1FSQ">
+                        <i class="fa-brands fa-square-youtube text-white fa-2x m-2"></i>
+                    </a>
+                    <a href="https://twitter.com/gododesigns">
+                        <i class="fa-brands fa-square-twitter text-white fa-2x m-2"></i>
+                    </a>
+                    <a href="https://www.instagram.com/gododesigns/">
+                        <i class="fa-brands fa-square-instagram text-white fa-2x m-2"></i>
+                    </a>
+                    <a href="https://www.facebook.com/gododesigns/">
+                        <i class="fa-brands fa-square-facebook text-white fa-2x m-2"></i>
+                    </a>
+                    <a href="https://github.com/gododesigns">
+                        <i class="fa-brands fa-square-github text-white fa-2x m-2"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/in/godo-designs-713323256/">
+                        <i class="fa-brands fa-linkedin text-white fa-2x m-2"></i>
+                    </a>
+                    <div class="row">
+                        <div class="col-md-12 text-center">
+                            <p class="font-weight-bold" style="font-family: 'Merriweather', serif;">Design and
+                                Copyrights © Godo Designs</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-    </div>
-</div>
-</footer>
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-<script src="https://kit.fontawesome.com/f02b892144.js" crossorigin="anonymous"></script>
-<script src="https://kit.fontawesome.com/f02b892144.js" crossorigin="anonymous"></script>
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/f02b892144.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/f02b892144.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
