--- a/contact.html
+++ b/contact.html
@@ -1,116 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Godo Designs</title>
-        <link rel="icon" href="Images\ad.png"type="Image.png"sizes="16x16">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link rel="stylesheet" href="index.css">
-      </head>
-<body>
-    <!--Nav Bar-->
-<header>
-    <div class="row text-dark bg-warning sticky-top">
-        <div class="col-md-6 col-9 p-3 pl-5">
-            <h1 class="font-weight-bold">Godo Designs</h1>
-    </div>
-    <div class="col-md-6 col-3 my-auto pb-2">
-        <nav class="navbar navbar-expand-lg">
-            <button class="navbar-toggler ml-auto bg-white " type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <i class="fa-solid fa-bars-staggered navbar-toggler-icon" style="line-height: 1.5;"></i>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                  <a class="nav-link text-secondary font-weight-bold" href="index.html"><h5>HOME</a></h5>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link text-secondary font-weight-bold" href="service.html"><h5>SERVICES</a></h5>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-secondary font-weight-bold" href="contact.html"><h5>CONTACT US</a></h5>
-                  </li>
-              </ul>
-            </div>
-          </nav>
-    </div>
-</div>
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Godo Designs</title>
+  <link rel="icon" href="Images\ad.png" type="Image.png" sizes="16x16">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="index.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 </head>
-<!--contact form-->
-<section class="bg-light pb-5">
-<div class="container pt-5">
-    <h1 class="text-center font-weight-bold">CONTACT US</h1>
-    <div class="row">
-        <div class="col-md-12">
-        <form>
+
+<body>
+  <!--Nav Bar-->
+  <header>
+    <div class="row text-dark bg-warning sticky-top">
+      <div class="col-md-6 col-9 pl-5 my-auto">
+        <h1 class="font-weight-bold" style="font-family: 'Merriweather', serif;">Godo Designs</h1>
+      </div>
+      <div class="col-md-6 col-3 my-auto pb-2">
+        <nav class="navbar navbar-expand-lg">
+          <button class="navbar-toggler ml-auto bg-white " type="button" data-toggle="collapse"
+            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <i class="fa-solid fa-bars-staggered navbar-toggler-icon" style="line-height: 1.5;"></i>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto" style="line-height: 1;text-align: end;">
+              <li class="nav-item active">
+                <a class="nav-link text-dark font-weight-bold" href="index.html">
+                  <h10 style="font-family: 'Merriweather', serif;">HOME
+                </a></h10>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-dark font-weight-bold" href="service.html">
+                  <h10 style="font-family: 'Merriweather', serif;">SERVICES
+                </a></h10>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-dark font-weight-bold" href="Gallery.html">
+                  <h10 style="font-family: 'Merriweather', serif;">GALLERY
+                </a></h10>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-dark font-weight-bold" href="contact.html">
+                  <h10 style="font-family: 'Merriweather', serif;">CONTACT
+                </a></h10>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </div>
+    </head>
+    <!--contact form-->
+    <section class="bg-light pb-5">
+      <div class="row">
+        <div class="col-md-6 pt-5 pl-5" style="font-family: 'Merriweather', serif;">
+          <h4 class="pt-1 font-weight-bold" style="text-align:center">CONTACT US</h4>
+          <form id="submit-form">
+            <div id="form_alerts"></div>
             <div class="form-row">
               <div class="form-group col-md-6">
                 <label for="inputEmail4">Name</label>
-                <input type="text" class="form-control" id="inputEmail4" placeholder="Name">
+                <input type="text" class="form-control" id="inputEmail4" name="Name" placeholder="Name" required>
               </div>
-                <div class="form-group col-md-6">
-                  <label for="inputEmail4">Place</label>
-                  <input type="text" class="form-control" id="inputEmail4" placeholder="Place">
-                </div>
+              <div class="form-group col-md-6">
+                <label for="inputEmail4">Place</label>
+                <input type="text" class="form-control" id="inputEmail4" name="Place" placeholder="Place" required>
               </div>
-              <div class="form-row">
-                <div class="form-group col-md-6">
-                  <label for="inputEmail4">Email</label>
-                  <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
-                </div>
-                  <div class="form-group col-md-6">
-                    <label for="inputEmail4">Mobile</label>
-                    <input type="tel" class="form-control" id="inputEmail4" placeholder="Mobile">
-                  </div>
-                </div>
+            </div>
+            <div class="form-row">
+              <div class="form-group col-md-6">
+                <label for="inputEmail4">Email</label>
+                <input type="email" class="form-control" id="inputEmail4" name="Email" placeholder="Email" required>
+              </div>
+              <div class="form-group col-md-6">
+                <label for="inputEmail4">Mobile</label>
+                <input type="tel" class="form-control" id="inputEmail4" name="Mobile" placeholder="Mobile" required>
+              </div>
+            </div>
             <div class="form-group">
               <label for="inputAddress">Message</label>
-              <textarea class="form-control" cols="30" rows="10" placeholder="Type your message here"></textarea>
+              <textarea class="form-control" name="Message" cols="30" rows="5" placeholder="Type your message here..."
+                required></textarea>
             </div>
             <div class="form-group">
-            <button type="submit" class="btn btn-primary" style="width: 100%;background-color: #ffcc00; border: #ffcc00;">Submit</button>
-        </div>
-    </div>
-          </form>
-    </div>
-    </div>
-</div>
-</section>
-    <!--footer-->
-    <footer class="bg-warning">
-        <div class="container">
-        <div class="row">
-            <div class="col-md-12 text-center text-dark">
-               <a href="https://www.youtube.com/channel/UCA1MOnKGAXEDOKZU98v1FSQ">
-               <i class="fa-brands fa-square-youtube text-white fa-2x m-2"></i>
-                 </a>
-                 <a href="https://www.instagram.com/gododesigns/">
-                <i class="fa-brands fa-square-instagram text-white fa-2x m-2"></i>
-                    </a>
-                    <a href="https://www.facebook.com/gododesigns/">
-                <i class="fa-brands fa-square-facebook text-white fa-2x m-2"></i>
-                    </a>
-                    <a href="https://github.com/gododesigns">
-                      <i class="fa-brands fa-github text-white fa-2x m-2"></i>
-                          </a>
-                <div class="row">
-                    <div class="col-md-6 pr-5" style="text-align:end;">
-                        <p class="font-weight-bold">Copyrights © Godo Designs</p>
-                </div>
-                <div class="col-md-6 pl-5" style="text-align:start;">
-                    <p class="font-weight-bold">Designed by Godo Designs</p>
-                </div>
+              <button type="submit" class="btn" value="send"
+                style="width: 100%;background-color: #ffcc00; border: #ffcc00;">Submit</button>
             </div>
         </div>
+        </form>
+        <div class="text-center col-md-6 my-auto" style="font-family: 'Merriweather', serif;">
+          <h2>Godo Designs</h2>
+          <h5>www.gododesigns.in</h5>
+          <h5>Email:- ajcreations.73@gmail.com</h5>
+          <h5>Mob:- 80 78 28 08 43</h5>
+          <a href="https://www.youtube.com/channel/UCA1MOnKGAXEDOKZU98v1FSQ">
+            <i class="fa-brands fa-square-youtube text-warning fa-2x m-2"></i>
+          </a>
+          <a href="https://twitter.com/gododesigns">
+            <i class="fa-brands fa-square-twitter text-warning fa-2x m-2"></i>
+          </a>
+          <a href="https://www.instagram.com/gododesigns/">
+            <i class="fa-brands fa-square-instagram text-warning fa-2x m-2"></i>
+          </a>
+          <a href="https://www.facebook.com/gododesigns/">
+            <i class="fa-brands fa-square-facebook text-warning fa-2x m-2"></i>
+          </a>
+          <a href="https://github.com/gododesigns">
+            <i class="fa-brands fa-square-github text-warning fa-2x m-2"></i>
+          </a>
+          <a href="https://www.linkedin.com/in/godo-designs-713323256/">
+            <i class="fa-brands fa-linkedin text-warning fa-2x m-2"></i>
+          </a>
         </div>
-    </div>
+    </section>
+    <!--footer-->
+    <footer class="bg-warning">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 text-center text-dark">
+
+            <div class="row">
+              <div class="col-md-12 text-center pt-2">
+                <p class="font-weight-bold" style="font-family: 'Merriweather', serif;">Design and Copyrights © Godo
+                  Designs</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </footer>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-<script src="https://kit.fontawesome.com/f02b892144.js" crossorigin="anonymous"></script>
-<script src="https://kit.fontawesome.com/f02b892144.js" crossorigin="anonymous"></script>
-</body>
+    <script>
+      const scriptURL = 'https://script.google.com/macros/s/AKfycbwHX4MYbOXJt2qIpBNuhUjbitJ7WUA7sw6vnH5c2RhrYqy6WCIux8DvUVJ_Oa5WcB_P5Q/exec'
+      const form = document.forms['submit-form']
+
+      form.addEventListener('submit', e => {
+        e.preventDefault()
+        fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+          .then(response => $("#form_alerts").html("<div class='alert alert-success'>Contact Message Sent Successfully.</div>"))
+          .catch(error => $("#form_alerts").html("<div class='alert alert-danger'>Contact Message Not Sent.</div>"))
+        form.reset()
+      })
+    </script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/f02b892144.js" crossorigin="anonymous"></script>
+    </body>
+
 </html>
